[tool.poetry]
name = "qrcode-ansiimg"
version = "0.1.0"
description = "ANSI output for 'qrcode'"
authors = ["Gyuri Horak <dyuri@horak.hu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
